clusters/home/apps/hoarder/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoarder-web
  annotations:
    glance/name: Hoarder
    glance/icon: di:hoarder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-web
  template:
    metadata:
      labels:
        app: hoarder-web
    spec:
      containers:
        - name: web
          image: ghcr.io/hoarder-app/hoarder
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
